# federeddit

./: .dockerignore  Dockerfile  Makefile.toml
.github/workflows/: build-base-image.yml  build-images.yml  build.yml  users-service-image.yml
charts/database/: Chart.yaml  values.yaml
charts/database/templates/: mysql-configmap.yaml  mysql-data-pv.yaml  mysql-read-service.yml  mysql-service.yml  mysql-statefullset.yaml
charts/users-service/: Chart.yaml  values.yaml
charts/users-service/charts/: database-0.1.0.tgz
crates/common/: Cargo.toml
crates/common/src/: cli.rs  lib.rs  logging.rs  repo.rs  utils.rs
crates/coordinator/: Cargo.toml
crates/coordinator/src/: home.rs  main.rs
crates/users-api/: Cargo.toml
crates/users-api/src/: auth.rs  bearer.rs  client.rs  error.rs  guard.rs  header.rs  lib.rs  user_service.rs
crates/users-service/: .env  Cargo.toml  Dockerfile  Makefile.toml  auth-key.pem  auth.pem  root-ca.pem
crates/users-service/migrations/2023-06-10-224327_init/: up.sql
crates/users-service/src/: actions.rs  authenticator.rs  main.rs  schema.rs  tokens.rs  user.rs
crates/users-service/tools/: createUser.sh
