[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
log4rs = "1.2.0"
log = "0.4.18"
diesel = { version = "2.1.0", default-features=false }
openssl = "0.10.54"
thiserror = "1.0.40"