[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
actix-web = { version = "4.3.1", features=["openssl"] }
tracing = "0.1.37"
clap = { version = "4.3.3", features=["derive", "env"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
common = { version = "0.1.0", path = "../common" }
