[package]
name = "users-api"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
email_address = "0.2.4"
serde = "1.0.164"
thiserror = "1.0.40"
jwt = "0.16.0"
actix-web = "4.3.1"
actix-utils = "3.0.1"
parking_lot = "0.12.1"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
nom = "7.1.3"
log = "0.4.18"
chrono = { version = "0.4.26", features = ["serde"] }
argon2 = "0.5.0"
rand = "0.8.5"
async-trait = "0.1.70"
base64 = "0.21.2"
common = { path = "../common"}