[package]
name = "users-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3.1", features =["cookies", "openssl"] }
cookie = { version = "0.17.0", features=["secure", "percent-encode"] }
common = { version = "0.1.0", path = "../common" }
serde = { version = "1.0.164" }
users-api = { version = "0.1.0", path = "../users-api" }
clap = "4.3.3"
hmac = "0.12.1"
sha2 = "0.10.6"
jwt = "0.16.0"
chrono = { version = "0.4.26", features = ["serde"] }
tracing = "0.1.37"
diesel = { version = "2.1.0", features=["mysql", "r2d2"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15.7"
r2d2 = "0.8.10"
argon2 = "0.5.0"
base64 = "0.21.2"
openssl = "0.10.54"
